--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,38 @@
             box-sizing: border-box;
         }
 
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #191414; 
-            color: #FFFFFF;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+    body {
+        font-family: 'Arial', sans-serif;
+        /* Remove static background color */
+        /* background-color: #191414; */
 
+        /* Add animated gradient background */
+        background: linear-gradient(-45deg, #1DB954, #191414, #282828, #1ed760);
+        background-size: 400% 400%;
+        animation: gradientBG 15s ease infinite;
+
+        color: #FFFFFF;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+
+    @keyframes gradientBG {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+        body, html {
+            height: 100%;
+            width: 100%;
+        }
         h1 {
             font-size: 2.5rem;
             margin-bottom: 20px;
