--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -140,6 +140,8 @@
 <body>
     <h1>Your Spotify Dashboard</h1>
 
+    <div id="shared-tracks-container" style="margin-top: 20px;"></div>
+
     <!-- <button id="fetch-tracks">Show My Tracks</button> -->
     <div id="tracks" class="dropdown">
         <h2>Your Top 10 Tracks</h2>
@@ -175,10 +177,8 @@
     <div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-top: 4px; font-style: italic;"></div>
   </div>
   
-  <div style="z-index: 2; margin-left: auto;">
-    <button id="share-now-playing" style="padding: 6px 12px; background-color: #1DB954; border: none; border-radius: 20px; color: white; cursor: pointer; font-weight: 600; font-size: 0.85rem; transition: background 0.3s ease;">
-      Share
-    </button>
+  <div style="margin-left: auto;">
+    <button id="share-now-playing" style="padding:8px 16px;background:linear-gradient(135deg, #1DB954, #1ed760);border:none;border-radius:24px;color:white;cursor:pointer;font-weight:700;font-size:0.9rem;box-shadow:0 4px 8px rgba(29, 185, 84, 0.4);transition:background 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;user-select:none;">Share</button>
   </div>
 </div>
 
@@ -310,6 +310,58 @@ setInterval(updateNowPlaying, 15000);
     alert('Something went wrong.');
   }
 });
+
+// trying twitter like feed
+async function loadSharedTracks() {
+  try {
+    const response = await fetch('/api/shared-tracks');
+    if (!response.ok) throw new Error('Network response was not ok');
+    const tracks = await response.json();
+
+    const container = document.getElementById('shared-tracks-container');
+    container.innerHTML = ''; // clear any old content
+
+    tracks.forEach(track => {
+      const post = document.createElement('div');
+      post.style = `
+        background: #121212;
+        color: white;
+        border-radius: 12px;
+        padding: 12px;
+        margin-bottom: 12px;
+        display: flex;
+        align-items: center;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.7);
+      `;
+
+      post.innerHTML = `
+        <img src="${track.image_url}" alt="Album Art" style="width: 64px; height: 64px; border-radius: 8px; object-fit: cover; margin-right: 15px;">
+        <div style="flex-grow: 1; overflow: hidden;">
+          <div style="font-weight: 700; font-size: 1rem; color: #1DB954; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;">
+            ${track.track}
+          </div>
+          <div style="font-size: 0.9rem; color: #B3B3B3; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;">
+            ${track.artist}
+          </div>
+          <div style="font-size: 0.85rem; font-style: italic; color: #888; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;">
+            ${track.album || ''}
+          </div>
+        </div>
+      `;
+
+      container.appendChild(post);
+    });
+
+    if (tracks.length === 0) {
+      container.innerHTML = '<p style="color:#666;">No tracks shared yet.</p>';
+    }
+  } catch (error) {
+    console.error('Failed to load shared tracks:', error);
+  }
+}
+
+// Call this function on page load
+loadSharedTracks();
 
 
     </script>
