share button changed again

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -165,15 +165,26 @@
         <ul id="recently-played-list"></ul>
     </div>
 
-    <div id="now-playing" style="margin-top: 20px; width: 100%; max-width: 600px; background-color: #282828; border-radius: 12px; padding: 20px; box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);">
-        <h2>Now Playing</h2>
-        <img id="now-playing-album-art" src="" alt="Album Art" style="width: 100%; height: auto; border-radius: 8px; display: none;">
-        <p id="now-playing-track" style="font-size: 1.5rem; margin-top: 10px;"></p>
-        <p id="now-playing-artist" style="font-size: 1.2rem;"></p>
-        <p id="now-playing-album" style="font-size: 1rem; color: #B3B3B3;"></p>
-        <button id="share-now-playing">Share Now Playing</button>
-    </div>
-    
+<div id="now-playing" style="position: fixed; bottom: 20px; right: 20px; width: 480px; background-color: #282828; border-radius: 12px; padding: 10px 16px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); display: flex; align-items: center; font-family: 'Arial', sans-serif; color: white; user-select: none; z-index: 1000; overflow: hidden; cursor: default; gap: 12px;"><img id="now-playing-album-art" src="" alt="Album Art" style="width: 50px; height: 50px; border-radius: 12px; object-fit: cover; background-color: #000; flex-shrink: 0;" /><div style="display: flex; gap: 10px; flex-grow: 1; overflow: hidden; white-space: nowrap; align-items: center;"><p id="now-playing-track" style="font-weight: 700; font-size: 1rem; color: #1DB954; overflow: hidden; text-overflow: ellipsis; margin: 0; max-width: 150px;">Not Playing</p><p id="now-playing-artist" style="font-size: 0.9rem; color: #B3B3B3; overflow: hidden; text-overflow: ellipsis; margin: 0; max-width: 130px;"></p><p id="now-playing-album" style="font-size: 0.85rem; color: #888; font-style: italic; overflow: hidden; text-overflow: ellipsis; margin: 0; max-width: 130px;"></p></div><button id="share-now-playing" style="padding: 6px 14px; background: linear-gradient(135deg, #1DB954, #1ed760); border: none; border-radius: 24px; color: white; cursor: pointer; font-weight: 700; font-size: 0.85rem; box-shadow: 0 4px 8px rgba(29, 185, 84, 0.4); transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease; user-select: none; flex-shrink: 0;">Share</button></div>
+
+    <!-- Now playing music
+<div id="now-playing-box" style="position: fixed; bottom: 20px; right: 20px; width: 360px; background-color: #282828; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); display: flex; padding: 12px; align-items: center; font-family: 'Arial', sans-serif; color: white; cursor: default; user-select: none; z-index: 1000; overflow: hidden;">
+  <div id="blurred-bg" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; filter: blur(20px); opacity: 0.15; background-position: center; background-size: cover; z-index: 0; border-radius: 12px; transition: background-image 0.5s ease;"></div>
+  
+  <img id="now-playing-album-art" alt="Album Art" style="height: 60px; width: 60px; border-radius: 50%; object-fit: cover; background-color: #000; flex-shrink: 0; z-index: 2; animation: spin 20s linear infinite;" />
+  
+  <div style="display: flex; flex-direction: column; justify-content: center; margin-left: 15px; overflow: hidden; flex-grow: 1; z-index: 2;">
+    <div id="now-playing-track" style="font-weight: 700; font-size: 1.1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: #1DB954;">Not Playing</div>
+    <div id="now-playing-artist" style="font-size: 0.9rem; color: #B3B3B3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-top: 2px;"></div>
+    <div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-top: 4px; font-style: italic;"></div>
+  </div>
+  
+  <div style="z-index: 2; margin-left: auto;">
+    <button id="share-now-playing" style="padding: 6px 12px; background-color: #1DB954; border: none; border-radius: 20px; color: white; cursor: pointer; font-weight: 600; font-size: 0.85rem; transition: background 0.3s ease;">
+      Share
+    </button>
+  </div>
+</div> -->
 <!-- menu -->
     <div class="menu-container">
   <button id="menu-button" class="menu-button" aria-label="Menu">☰</button>
