--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -165,10 +165,28 @@
         <ul id="recently-played-list"></ul>
     </div>
 
+<div id="now-playing-box" style="position: fixed; bottom: 20px; right: 20px; width: 360px; background-color: #282828; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); padding: 12px; font-family: 'Arial', sans-serif; color: white; cursor: default; user-select: none; z-index: 1000; overflow: hidden; display: flex; flex-direction: column; gap: 10px;">
+
+  <div id="blurred-bg" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; filter: blur(20px); opacity: 0.15; background-position: center; background-size: cover; z-index: 0; border-radius: 12px; transition: background-image 0.5s ease;"></div>
+
+  <div style="display: flex; align-items: center; z-index: 2;">
+    <img id="now-playing-album-art" alt="Album Art" style="height: 60px; width: 60px; border-radius: 50%; object-fit: cover; background-color: #000; flex-shrink: 0; animation: spin 20s linear infinite;" />
+    <div style="display: flex; flex-direction: column; justify-content: center; margin-left: 15px; overflow: hidden; flex-grow: 1;">
+      <div id="now-playing-track" style="font-weight: 700; font-size: 1.1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: #1DB954;">Not Playing</div>
+      <div id="now-playing-artist" style="font-size: 0.9rem; color: #B3B3B3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-top: 2px;"></div>
+      <div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-top: 4px; font-style: italic;"></div>
+    </div>
+  </div>
+
+  <div style="display: flex; justify-content: flex-end; z-index: 2;">
+    <button id="share-now-playing" style="padding: 4px 10px; background-color: #1DB954; border: none; border-radius: 14px; color: white; cursor: pointer; font-weight: 500; font-size: 0.75rem; transition: background 0.3s ease;">Share</button>
+  </div>
+
+</div>
 
 
     <!-- Now playing music -->
-<div id="now-playing-box" style="position: fixed; bottom: 20px; right: 20px; width: 360px; background-color: #282828; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); display: flex; padding: 12px; align-items: center; font-family: 'Arial', sans-serif; color: white; cursor: default; user-select: none; z-index: 1000; overflow: hidden;">
+<!-- <div id="now-playing-box" style="position: fixed; bottom: 20px; right: 20px; width: 360px; background-color: #282828; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); display: flex; padding: 12px; align-items: center; font-family: 'Arial', sans-serif; color: white; cursor: default; user-select: none; z-index: 1000; overflow: hidden;">
   <div id="blurred-bg" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; filter: blur(20px); opacity: 0.15; background-position: center; background-size: cover; z-index: 0; border-radius: 12px; transition: background-image 0.5s ease;"></div>
   
   <img id="now-playing-album-art" alt="Album Art" style="height: 60px; width: 60px; border-radius: 50%; object-fit: cover; background-color: #000; flex-shrink: 0; z-index: 2; animation: spin 20s linear infinite;" />
@@ -183,12 +201,9 @@
     <button id="share-now-playing" style="padding: 6px 12px; background-color: #1DB954; border: none; border-radius: 20px; color: white; cursor: pointer; font-weight: 600; font-size: 0.85rem; transition: background 0.3s ease;">
       Share
     </button>
-  </div> -->
-  <div style="z-index: 2; margin-left: auto; display: flex; align-items: center;">
-  <button id="share-now-playing" style="padding: 4px 10px; background-color: #1DB954; border: none; border-radius: 14px; color: white; cursor: pointer; font-weight: 500; font-size: 0.75rem; transition: background 0.3s ease;">Share</button>
-</div>
+  </div> 
 
-</div>
+</div> -->
 
 <!-- menu -->
     <div class="menu-container">
