this doesnt work

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -142,10 +142,10 @@
 
     <!-- <div id="shared-tracks-container" style="margin-top: 20px;"></div> -->
 
-    <div id="shared-tracks" class="dropdown">
+    <!-- <div id="shared-tracks" class="dropdown">
         <h2>My Feed</h2>
         <div id="shared-tracks-container" style="margin-top: 20px;"></div>
-    </div>
+    </div> -->
 
 
     <!-- <button id="fetch-tracks">Show My Tracks</button> -->
