--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -191,40 +191,21 @@
 </div>
 
 
-    <!-- Now playing music -->
-<!-- <div id="now-playing-box" style="position: fixed; bottom: 20px; right: 20px; width: 360px; background-color: #282828; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); display: flex; padding: 12px; align-items: center; font-family: 'Arial', sans-serif; color: white; cursor: default; user-select: none; z-index: 1000; overflow: hidden;">
-  <div id="blurred-bg" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; filter: blur(20px); opacity: 0.15; background-position: center; background-size: cover; z-index: 0; border-radius: 12px; transition: background-image 0.5s ease;"></div>
-  
-  <img id="now-playing-album-art" alt="Album Art" style="height: 60px; width: 60px; border-radius: 50%; object-fit: cover; background-color: #000; flex-shrink: 0; z-index: 2; animation: spin 20s linear infinite;" />
-  
-  <div style="display: flex; flex-direction: column; justify-content: center; margin-left: 15px; overflow: hidden; flex-grow: 1; z-index: 2;">
-    <div id="now-playing-track" style="font-weight: 700; font-size: 1.1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: #1DB954;">Not Playing</div>
-    <div id="now-playing-artist" style="font-size: 0.9rem; color: #B3B3B3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-top: 2px;"></div>
-    <div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-top: 4px; font-style: italic;"></div>
-  </div>
-  
-  <!-- <div style="z-index: 2; margin-left: auto;">
-    <button id="share-now-playing" style="padding: 6px 12px; background-color: #1DB954; border: none; border-radius: 20px; color: white; cursor: pointer; font-weight: 600; font-size: 0.85rem; transition: background 0.3s ease;">
-      Share
-    </button>
-  </div> 
-
-</div> -->
 <div class="header">
   <a href="/feed" class="feed-link">
-    <button>Go to Feed</button>
+    <button id="feed-button">Go to Feed</button>
   </a>
-<!-- menu -->
-    <div class="menu-container">
-  <button id="menu-button" class="menu-button" aria-label="Menu">☰</button>
-  <div id="menu" class="menu hidden">
-    <a href="#" id="menu-shared-tracks">My Feed</a>
-    <a href="#" id="menu-top-tracks">Top Tracks</a>
-    <a href="#" id="menu-top-artists">Top Artists</a>
-    <a href="#" id="menu-life-top-tracks">Life Top Tracks</a>
-    <a href="#" id="menu-recently-played">Recently Played</a>
+
+  <div class="menu-container">
+    <button id="menu-button" class="menu-button" aria-label="Menu">☰</button>
+    <div id="menu" class="menu hidden">
+      <a href="#" id="menu-shared-tracks">My Feed</a>
+      <a href="#" id="menu-top-tracks">Top Tracks</a>
+      <a href="#" id="menu-top-artists">Top Artists</a>
+      <a href="#" id="menu-life-top-tracks">Life Top Tracks</a>
+      <a href="#" id="menu-recently-played">Recently Played</a>
+    </div>
   </div>
-</div>
 </div>
 
     <style>
