--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -207,6 +207,7 @@
     </div>
   </div>
 </div>
+    <iframe src="/feed" style="width:60%; height:400px; border:none;"></iframe>
 
     <style>
         @keyframes spin {
