--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -208,26 +208,24 @@
     <button id="feed-button">Feed</button>
     </div>
 
-    <div id="iframe-container"></div>
+    <!-- Container for the feed block -->
+<div id="feed-block" style="display:none; width:60%; height:400px; background-color:black; margin-top: 20px;">
+  <iframe id="feed-iframe" src="/feed" style="width:100%; height:100%; border:none;"></iframe>
+</div>
 
-    <script>
-    document.getElementById('feed-button').addEventListener('click', () => {
-        const container = document.getElementById('iframe-container');
+<script>
+  const feedButton = document.getElementById('feed-button');
+  const feedBlock = document.getElementById('feed-block');
 
-        // Check if iframe already exists to avoid duplicates
-        if (!container.querySelector('iframe')) {
-        const iframe = document.createElement('iframe');
-        iframe.src = '/feed';
-        iframe.style.width = '60%';
-        iframe.style.height = '400px';
-        iframe.style.border = 'none';
-        container.appendChild(iframe);
-        }
-    });
-    </script>
-
-    <iframe src="/feed" style="width:60%; height:400px; border:none;"></iframe>
-
+  feedButton.addEventListener('click', () => {
+    // Toggle feed block visibility
+    if (feedBlock.style.display === 'none') {
+      feedBlock.style.display = 'block';
+    } else {
+      feedBlock.style.display = 'none';
+    }
+  });
+</script>
     <style>
         @keyframes spin {
             0% { transform: rotate(0deg); }
