--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -204,47 +204,72 @@
     </div>
   </div>
 
-  <div class="header">
+<div class="header">
   <button id="feed-button">Feed</button>
 </div>
 
-<div id="feed-block" style="display:none; width:60%; height:400px; background-color:black; color: white; overflow-y: auto; padding: 10px; margin-top: 20px;">
-  <!-- Feed content will be loaded here -->
-  <h2>My Feed</h2>
-  <div id="feed-content">Loading...</div>
+<div id="feed-block" style="display:none; width:60%; height:400px; background-color:black; color: white; overflow-y: auto; padding: 10px; margin-top: 20px; border-radius: 12px;">
+  <h2 style="color:#1DB954; margin-bottom: 15px;">My Feed</h2>
+  <div id="shared-tracks-container">Loading...</div>
 </div>
 
 <script>
   const feedButton = document.getElementById('feed-button');
   const feedBlock = document.getElementById('feed-block');
-  const feedContent = document.getElementById('feed-content');
+  const sharedTracksContainer = document.getElementById('shared-tracks-container');
 
-  feedButton.addEventListener('click', async () => {
+  async function loadSharedTracks() {
+    try {
+      const response = await fetch('/api/shared-tracks');
+      if (!response.ok) throw new Error('Network response was not ok');
+      const tracks = await response.json();
+
+      sharedTracksContainer.innerHTML = ''; // clear old content
+
+      tracks.forEach(track => {
+        const post = document.createElement('div');
+        post.style = `
+          background: #121212;
+          color: white;
+          border-radius: 12px;
+          padding: 12px;
+          margin-bottom: 12px;
+          display: flex;
+          align-items: center;
+          box-shadow: 0 2px 6px rgba(0,0,0,0.7);
+        `;
+
+        post.innerHTML = `
+          <img src="${track.image_url}" alt="Album Art" style="width: 64px; height: 64px; border-radius: 8px; object-fit: cover; margin-right: 15px;">
+          <div style="flex-grow: 1; overflow: hidden;">
+            <div style="font-weight: 700; font-size: 1rem; color: #1DB954; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;">
+              ${track.track}
+            </div>
+            <div style="font-size: 0.9rem; color: #B3B3B3; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;">
+              ${track.artist}
+            </div>
+            <div style="font-size: 0.85rem; font-style: italic; color: #888; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;">
+              ${track.album || ''}
+            </div>
+          </div>
+        `;
+
+        sharedTracksContainer.appendChild(post);
+      });
+
+      if (tracks.length === 0) {
+        sharedTracksContainer.innerHTML = '<p style="color:#666;">No tracks shared yet.</p>';
+      }
+    } catch (error) {
+      sharedTracksContainer.innerHTML = '<p style="color:red;">Error loading feed.</p>';
+      console.error('Failed to load shared tracks:', error);
+    }
+  }
+
+  feedButton.addEventListener('click', () => {
     if (feedBlock.style.display === 'none') {
       feedBlock.style.display = 'block';
-
-      // Example: fetch your feed data via API and display it inside feedContent
-      try {
-        const res = await fetch('/api/shared-tracks');  // or any feed API route you have
-        if (!res.ok) throw new Error('Failed to fetch feed');
-        const data = await res.json();
-
-        if (data.length === 0) {
-          feedContent.innerHTML = '<p>No shared tracks yet.</p>';
-          return;
-        }
-
-        // Build HTML list from the feed data
-        feedContent.innerHTML = data.map(track => 
-          `<div style="margin-bottom: 10px;">
-             <strong>${track.track}</strong> by ${track.artist}
-           </div>`
-        ).join('');
-
-      } catch (error) {
-        feedContent.innerHTML = '<p>Error loading feed.</p>';
-        console.error(error);
-      }
+      loadSharedTracks();
     } else {
       feedBlock.style.display = 'none';
     }
