--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -195,6 +195,8 @@
 
   <div class="menu-container">
     <button id="menu-button" class="menu-button" aria-label="Menu">☰</button>
+    <button id="feed-button" class="menu-button">Feed</button>
+
     <div id="menu" class="menu hidden">
       <a href="#" id="menu-shared-tracks">My Feed</a>
       <a href="#" id="menu-top-tracks">Top Tracks</a>
@@ -203,12 +205,11 @@
       <a href="#" id="menu-recently-played">Recently Played</a>
     </div>
   </div>
-
+<!-- 
 <div class="header">
-  <button id="feed-button">Feed</button>
-</div>
+</div> -->
 
-<div id="feed-block" style="display:none; width:60%; height:400px; background-color:black; color: white; overflow-y: auto; padding: 10px; margin-top: 20px; border-radius: 12px;">
+<div id="feed-block" style="display:none; width:60%; height:600px; background-color:rgb(34, 33, 33); color: white; overflow-y: auto; padding: 10px; margin-top: 20px; border-radius: 12px;">
   <h2 style="color:#1DB954; margin-bottom: 15px;">My Feed</h2>
   <div id="shared-tracks-container">Loading...</div>
 </div>
