--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -195,8 +195,7 @@
     <button id="feed-button" class="menu-button">Feed</button>
     <button id="menu-button" class="menu-button" aria-label="Menu">☰</button>
 
-    <div id="menu" class="menu hidden">
-      <a href="#" id="menu-shared-tracks">My Feed</a>
+    <div id="menu" class="hidden">
       <a href="#" id="menu-top-tracks">Top Tracks</a>
       <a href="#" id="menu-top-artists">Top Artists</a>
       <a href="#" id="menu-life-top-tracks">Life Top Tracks</a>
