--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -191,17 +191,24 @@
 </div> -->
 
 
- <!-- Now playing music -->
+<!-- Now playing music -->
 <div id="now-playing-box" style="position: fixed; bottom: 20px; right: 20px; width: 360px; background-color: #282828; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.7); display: flex; padding: 12px; align-items: center; font-family: 'Arial', sans-serif; color: white; cursor: default; user-select: none; z-index: 1000; overflow: hidden;">
   <div id="blurred-bg" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; filter: blur(20px); opacity: 0.15; background-position: center; background-size: cover; z-index: 0; border-radius: 12px; transition: background-image 0.5s ease;"></div>
   
   <img id="now-playing-album-art" alt="Album Art" style="height: 60px; width: 60px; border-radius: 50%; object-fit: cover; background-color: #000; flex-shrink: 0; z-index: 2; animation: spin 20s linear infinite;" />
-@@ -183,12 +201,9 @@ <h2>Your Recently Played Tracks</h2>
-    <button id="share-now-playing" style="padding: 6px 12px; background-color: #1DB954; border: none; border-radius: 20px; color: white; cursor: pointer; font-weight: 600; font-size: 0.85rem; transition: background 0.3s ease;">
-      Share
-    </button>
-  </div> 
+  
+  <div style="display: flex; flex-direction: column; justify-content: center; margin-left: 15px; z-index: 2;">
+    <div id="now-playing-track" style="font-weight: 700; font-size: 1.1rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: #1DB954;">Play some music ;</div>
+    <div id="now-playing-artist" style="font-size: 0.9rem; color: #B3B3B3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-top: 2px;"></div>
+    <div id="now-playing-album" style="font-size: 0.85rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-top: 4px; font-style: italic;"></div>
+  </div>
+  
+  <div style="margin-left: auto; z-index: 2;">
+    <button id="share-now-playing" style="padding: 6px 12px; background-color: #1DB954; border: none; border-radius: 20px; color: white; cursor: pointer; font-weight: 600; font-size: 0.85rem; transition: background 0.3s ease;">Share</button>
+  </div>
 </div>
+
+
 
   <div class="menu-container">
     <button id="feed-button" class="menu-button">Feed</button>
@@ -340,7 +347,8 @@
             return `<span class="track-name">${track.track}</span> by <span class="artist-name">${track.artist}</span>`;
         });
 
-        // Now Playing Bar
+
+// Now Playing Bar
         async function updateNowPlaying() {
     try {
         const response = await fetch('/api/now-playing');
